--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-WHOP_API_KEY=Y1NTaf4evLV7tIw2oclIFKzpSAOxiOLcKMw1xEXpD1A
-V2_PRODUCTS_TOKEN=YQTLCygWYbVDuCk88fskCAnKpthL2PoHKXcA8NZtQDE
-MONGODB_URI=mongodb+srv://ronelmendozawork01_db_user:ZalTMjRzlYjUh9ar@cluster0.bqwun9m.mongodb.net/
+VITE_BACKEND_URL=https://3ae9a4221371.ngrok.app
