--- a/package.json
+++ b/package.json
@@ -1,44 +1,39 @@
 {
-  "name": "whop-demo-server",
-  "version": "1.0.0",
-  "description": "Whop Demo API Server - Node.js Backend",
-  "main": "src/server.ts",
+  "name": "frontend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "ts-node --max-old-space-size=256 --expose-gc src/server.ts",
-    "start:updater": "ts-node --max-old-space-size=256 --expose-gc src/updater.ts",
-    "dev": "ts-node src/server.ts",
-    "dev:updater": "ts-node src/updater.ts",
-    "clean": "rimraf dist"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@types/async": "^3.2.25",
-    "@types/mongoose": "^5.11.96",
-    "@whop-apps/sdk": "^0.0.1-canary.117",
-    "@whop/api": "^0.0.51",
-    "async": "^3.2.6",
-    "axios": "^1.6.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^8.19.1"
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.12.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.9.4",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.7.2",
-    "@whop-apps/dev-proxy": "^0.0.1-canary.117",
-    "nodemon": "^3.1.10",
-    "rimraf": "^6.0.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
-  },
-  "keywords": [
-    "whop",
-    "api",
-    "backend",
-    "nodejs"
-  ],
-  "author": "Whop Demo",
-  "license": "MIT"
+    "@eslint/js": "^9.36.0",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@tailwindcss/vite": "^4.1.14",
+    "@types/node": "^24.6.0",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^5.0.4",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.36.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.22",
+    "globals": "^16.4.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.45.0",
+    "vite": "^7.1.7"
+  }
 }
